--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
 </head>
 <body>
 	<header>
-		<nav>
+
+		<div class="menu__mobile">
+			<nav>
+				<div class="logo"></div>
+				<button class="menu__mobile__button">
+					<svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi 	bi-list" viewBox="0 0 16 16">
+					  <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+					</svg>
+				</button>
+				<div class="menu__mobile__list">
+					<ul>
+						<li><a href="#">INICIO</a></li>
+						<li><a href="#">SERVIÇOS</a></li>
+						<li><a href="#">AGENDE UMA CONSULTA</a></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+
+		<nav class="menu__desktop">
 			<ul class="left">
 				<li><a href="#">INICIO</a></li>
 				<li><a href="#">SERVICOS</a></li>
