--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
-			      <img src="https://picsum.photos/3200/1600" class="d-block w-100" alt="...">
+			      <img src="assets/img/armChair.webp" class="d-block w-100" alt="...">
 			    </div>
 			    <div class="carousel-item">
-			      <img src="https://picsum.photos/3200/1600" class="d-block w-100" alt="...">
+			      <img src="assets/img/armChair2.webp" class="d-block w-100" alt="...">
 			    </div>
 			    <div class="carousel-item">
-			      <img src="https://picsum.photos/3200/1600" class="d-block w-100" alt="...">
+			      <img src="assets/img/armChair2.webp" class="d-block w-100" alt="...">
 			    </div>
 			  </div>
 
