--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				</button>
 				<div class="menu__mobile__list">
 					<ul>
-						<li><a href="#">INICIO</a></li>
-						<li><a href="#">SERVIÇOS</a></li>
+						<li><a href="#top">INICIO</a></li>
+						<li><a href="#services">SERVIÇOS</a></li>
 						<li><a href="#">AGENDE UMA CONSULTA</a></li>
 					</ul>
 				</div>
@@ -35,8 +35,8 @@
 
 		<nav class="menu__desktop">
 			<ul class="left">
-				<li><a href="#">INICIO</a></li>
-				<li><a href="#">SERVICOS</a></li>
+				<li><a href="#top">INICIO</a></li>
+				<li><a href="#services">SERVICOS</a></li>
 			</ul>
 
 			<div class="logo">
@@ -49,7 +49,7 @@
 	</header>
 
 	<main>
-		<header class="hero">
+		<header class="hero" >
 			<div class="photo">
 				<img src="assets/img/woman.jpeg" />
 			</div>
@@ -98,6 +98,9 @@
 			  </button>
 			</div>
 		</section>
+
+
+		<section class="services" id="services"></section>
 
 
 	</main>
