changed description text formatting, also changed primary color, changed the picture style on mobile

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 				<h1>
 					Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur urna cursus.
 				</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dui urna, cursus sed nunc at, accumsan luctus ante. Quisque non urna leo. Vestibulum lobortis vehicula quam non pretium. Sed sit amet fermentum nisi. Aliquam erat volutpat. Etiam quis massa erat. In tellus turpis, dignissim sit amet vehicula nec, sollicitudin et orci. Proin dui dolor, imperdiet sed elit faucibus, fermentum imperdiet eros. Phasellus pulvinar enim eget suscipit rutrum. Pellentesque ut justo lacus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dui urna, cursus sed nunc at, accumsan luctus ante. Quisque non urna leo. Vestibulum lobortis vehicula quam non pretium. Sed sit amet fermentum nisi. Aliquam erat volutpat. Etiam quis massa erat. In tellus turpis, dignissim sit amet vehicula nec, sollicitudin et orci.</p>
 				<p>Aliquam erat volutpat. In sed lectus arcu. Quisque a tempor magna. Vivamus arcu lacus, sollicitudin at turpis sed, ultrices imperdiet mi. Cras eu nulla ut massa fringilla porttitor. Nullam eu ligula sit amet lacus euismod aliquam. Nulla consectetur efficitur augue, sit amet feugiat libero aliquam a. Aenean convallis quam vitae libero molestie fermentum.</p>
-				<p>Donec hendrerit quam turpis, eget molestie nunc fermentum in. Suspendisse facilisis malesuada nisl a varius. Nunc ut ligula lobortis, cursus erat et, auctor mauris. Mauris ultricies lacus et accumsan sollicitudin. Vivamus viverra eleifend massa. Suspendisse tincidunt elit lacus, quis maximus sapien sodales eu. Curabitur fermentum eleifend maximus. In quis erat lectus. Aliquam sed odio a libero tempor rhoncus. Donec et maximus justo. Aliquam erat volutpat.</p>
+				<p>Donec hendrerit quam turpis, eget molestie nunc fermentum in. Suspendisse facilisis malesuada nisl a varius. Nunc ut ligula lobortis, cursus erat et, auctor mauris.</p>
 		</section>
 
 		<section class="carousel__container">
