added first version of footer

--- a/index.html
+++ b/index.html
@@ -105,6 +105,21 @@
 
 	</main>
 
+	<footer>
+		<div class="logo__container">
+			<a href="">
+				<div class="logo"></div>
+			</a>
+		</div>
+		<div class="details">
+			<ul>
+				<li><p>Company Name Collective LTDA, CA 92805</p></li>
+				<li><p><a href="tel:99987654321">(99) 98765-4321</a> | <a target="_blank" href="mailto:name@domain.com">name@domain.com</a></p></li>
+				<li><p>Website Design: <a target="_blank" href="https://www.github.com/filipesvb">filipesvb</a> | Photos: <a target="_blank" href="google.com">Photographer</a></p></li>
+			</ul>
+		</div>
+	</footer>
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 	<script  src="src/main.js"></script>
 </body>
