--- a/index.html
+++ b/index.html
@@ -100,7 +100,58 @@
 		</section>
 
 
-		<section class="services" id="services"></section>
+		<section class="services" id="services">
+			
+			<div class="service__card" id="target">
+				<div class="card__name">
+					<span class="card__name__icon">
+						<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-ear" viewBox="0 0 16 16">
+							 <path d="M8.5 1A4.5 4.5 0 0 0 4 5.5v7.047a2.453 2.453 0 0 0 4.75.861l.512-1.363a5.6 5.6 0 0 1 .816-1.46l2.008-2.581A4.34 4.34 0 0 0 8.66 1zM3 5.5A5.5 5.5 0 0 1 8.5 0h.16a5.34 5.34 0 0 1 4.215 8.618l-2.008 2.581a4.6 4.6 0 0 0-.67 1.197l-.51 1.363A3.453 3.453 0 0 1 3 12.547zM8.5 4A1.5 1.5 0 0 0 7 5.5v2.695q.168-.09.332-.192c.327-.208.577-.44.72-.727a.5.5 0 1 1 .895.448c-.256.513-.673.865-1.079 1.123A9 9 0 0 1 7 9.313V11.5a.5.5 0 0 1-1 0v-6a2.5 2.5 0 0 1 5 0V6a.5.5 0 0 1-1 0v-.5A1.5 1.5 0 0 0 8.5 4"/>
+						</svg>
+					</span>
+					<h3 class="card__name__name">Psicoterapia</h3>
+				</div>
+				<hr />
+				<div class="card__description">
+					<p>A psicoterapia é um espaço seguro onde você pode se abrir, falar sobre suas angústias, desafios e sentimentos. É um processo de autoconhecimento que promove equilíbrio e bem-estar emocional.</p>
+					<p>Quer começar a cuidar mais de você? Agende sua sessão e descubra como a psicoterapia pode transformar sua vida.</p>
+				</div>
+			</div>
+
+			<div class="service__card">
+				<div class="card__name">
+					<span class="card__name__icon">
+						 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chat-square-heart" viewBox="0 0 16 16">
+						  <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+						  <path d="M8 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132"/>
+						</svg>
+					</span>
+					<h3 class="card__name__name">Conselhos</h3>
+				</div>
+				<hr />
+				<div class="card__description">
+					<p>Está enfrentando dificuldades no seu relacionamento? Com orientações profissionais, você pode transformar conflitos em oportunidades de crescimento e fortalecer os laçoes afetivos.</p>
+					<p>Quer melhorar sua relação? Vamos juntos trabalhar na construção de um relacionamento mais saudável e feliz.</p>
+				</div>
+			</div>
+
+			<div class="service__card">
+				<div class="card__name">
+					<span class="card__name__icon">
+						<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="current" class="bi bi-linkedin" viewBox="0 0 16 16">
+						  <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+						</svg>
+					</span>
+					<h3 class="card__name__name">Orientação</h3>
+				</div>
+				<hr />
+				<div class="card__description">
+					<p>Se você está em dúvida sobre sua carreira ou se sente estagnado profissionalmente, a orientação com um psicólogo pode te ajudar a clarear suas metas e identificar suas forças.</p>
+					<p>Está pronto para descobrir sua próxima direção? Agende uma consulta e dê o primeiro passo para uma carreira mais satisfatória.</p>
+				</div>
+			</div>
+
+		</section>
 
 
 	</main>
